--- a/index.html
+++ b/index.html
@@ -9,33 +9,9 @@
         <div id="app">
             <h2 class="title has-text-centered dividing-header">UpVote!</h2>
             <div class="section">
-                <article class="media" v-for="submission in submissions" v-bind:key="submission.id">
-                    <figure class="media-left">
-                        <img class="image is-64x64" src="public/images/submissions/image-yellow.png">
-                    </figure>
-                    <div class="media-content">
-                        <div class="content">
-                            <p>
-                                <strong>
-                                    <a href="#" class="has-text-info">{{ submission.title }}</a>
-                                    <span class="tag is-small">#{{ submission.id }}</span>
-                                </strong>
-                                <br>
-                                {{ submission.description }}
-                                <br>
-                                <small class="is-size-7">
-                                    Submitted by:
-                                    <img class="image is-24x24" :src="submission.avatar">
-                                </small>
-                             </p>
-                        </div>
-                    </div>
-                    <div class="media-right">
-                        <span class="icon is-small">
-                            <i class="fa fa-chevron-up"></i>
-                            <strong class="has-text-info">{{ submission.votes }}</strong>
-                        </span>
-                    </div>
+                <!-- computed 像成员一样调用 -->
+                <article class="media" v-for="submission in sortedSubmissions" v-bind:key="submission.id" v-bind:class="{ 'blue-border': submission.votes >= 20 }">
+                    <submission-component v-bind:submission="submission" v-bind:submissions="sortedSubmissions"></submission-component>
                 </article>
             </div>
         </div>
